--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="d-flex flex-column col-5 align-items-center text-center align-self-center">
           <div class="mx-auto text-center">
             <div class="p-3">
-              <img src=frank.jpg style="height:15rem" class="rounded">
+              <img src=J.jpg style="height:15rem" class="rounded">
             </div>
             <div class="p-2">
               <h1>Jose Sanchez</h1>
@@ -36,21 +36,21 @@
               <div id="icon-list">
                 <ul class="list-inline">
                                     <li class="list-inline-item">
-                    <a href=https://linkedin.com/>
+                    <a href=https://www.linkedin.com/in/jose-sanchez-3ba76a186/>
                       <button type="button" class="btn btn-outline-dark mb-2">
                         LinkedIn
                       </button>
                     </a>
                   </li>
                                     <li class="list-inline-item">
-                    <a href=https://twitter.com/>
+                    <a href=https://twitter.com/Poor_Li77le_1>
                       <button type="button" class="btn btn-outline-dark mb-2">
                         Twitter
                       </button>
                     </a>
                   </li>
                                     <li class="list-inline-item">
-                    <a href=https://github.com/>
+                    <a href=https://github.com/Jose-Sanchez-007>
                       <button type="button" class="btn btn-outline-dark mb-2">
                         GitHub
                       </button>
@@ -73,14 +73,14 @@
           <div class="my-5" id="content">
             <div id="bio" class="section level2">
             <h2>Bio</h2>
-            <p>Frank Hermosillo studies neural networks and their applications at Google Brain. His research focuses on differentiable network pruning approximation and decentralized gradient inversion mechanics. He frequently collaborates with researchers who study machine learning, computer vision, and cognitive science. His work has been featured in WIRED, The Atlantic, Newsweek, and The New York Times Magazine.</p>
+            <p>Jose Sanchez studies Psychology and Data Science at Lehman College.</p>
             </div>
             <div id="education" class="section level2">
             <h2>Education</h2>
-            <p><strong>Massachusetts Institute of Technology</strong> | Cambridge, MA</p>
-            <p>Ph.D. in Computer Science | September 2009 - May 2014</p>
-            <p><strong>The University of California, Berkeley</strong> | Berkeley, CA</p>
-            <p>B.S. in Computer Science | September 2005 - May 2009</p>
+            <p><strong>Lehman College</strong> | New York, NY</p>
+            <p>B.A. in Psychology | September 2018 - Current</p>
+            <p><strong>Lehman College</strong> | New York, NY</p>
+            <p>Minor in Data Science | September 2018 - Current</p>
             </div>
             <div id="experience" class="section level2">
             <h2>Experience</h2>
@@ -97,7 +97,7 @@
         <div class="d-flex flex-col">
           <div class="mx-auto">
             <div class="p-3 mt-3 text-center">
-              <img src=frank.jpg style="height:15rem" class="rounded">
+              <img src=J.jpg style="height:15rem" class="rounded">
             </div>
             <div class="p-2 text-center">
               <h1>Jose Sanchez</h1>
@@ -107,17 +107,17 @@
             <div class="row justify-content-center align-items-center">
               <div class="col-8 p-1 text-center">
                 <div class="list-group">
-                                    <a href=https://linkedin.com/>
+                                    <a href=https://www.linkedin.com/in/jose-sanchez-3ba76a186/>
                     <button type="button" class="list-group-item list-group-item-action my-1 rounded">
                       LinkedIn
                     </button>
                   </a>
-                                    <a href=https://twitter.com/>
+                                    <a href=https://twitter.com/Poor_Li77le_1>
                     <button type="button" class="list-group-item list-group-item-action my-1 rounded">
                       Twitter
                     </button>
                   </a>
-                                    <a href=https://github.com/>
+                                    <a href=https://github.com/Jose-Sanchez-007>
                     <button type="button" class="list-group-item list-group-item-action my-1 rounded">
                       GitHub
                     </button>
@@ -133,14 +133,14 @@
             <div class="p pt-4 px-5">
               <div id="bio" class="section level2">
               <h2>Bio</h2>
-              <p>Frank Hermosillo studies neural networks and their applications at Google Brain. His research focuses on differentiable network pruning approximation and decentralized gradient inversion mechanics. He frequently collaborates with researchers who study machine learning, computer vision, and cognitive science. His work has been featured in WIRED, The Atlantic, Newsweek, and The New York Times Magazine.</p>
+              <p>Jose Sanchez studies Psychology and Data Science at Lehman College.</p>
               </div>
               <div id="education" class="section level2">
               <h2>Education</h2>
-              <p><strong>Massachusetts Institute of Technology</strong> | Cambridge, MA</p>
-              <p>Ph.D. in Computer Science | September 2009 - May 2014</p>
-              <p><strong>The University of California, Berkeley</strong> | Berkeley, CA</p>
-              <p>B.S. in Computer Science | September 2005 - May 2009</p>
+              <p><strong>Lehman College</strong> | New York, NY</p>
+              <p>B.A. in Psychology | September 2018 - Current</p>
+              <p><strong>Lehman College</strong> | New York, NY</p>
+              <p>Minor in Data Science | September 2018 - Current</p>
               </div>
               <div id="experience" class="section level2">
               <h2>Experience</h2>
